--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.3",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.9",
     "yup": "^1.6.1"
